# xdbc-python

./: CMakeLists.txt  Dockerfile  Dockerfile.old  Makefile  README.md  convert_csv_to_parquet.py  parquet_to_csv.py
archive/: archive.cpp
cpp/: CMakeLists.txt
cpp/include/: xdbc.h
cpp/src/: xdbc.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test_xdbc.cpp
docker/: Dockerfile
python/: client.cpp  xdb.cpp  xdbc.cpp  xdbc_refactored.cpp  xdbcparquet.cpp
tests/: pandas_baselines.py  pandas_csv.py  pandas_parquet.py  pandas_xdbc.py  schemata.py  test_naive.py  test_xdbc.py  tf.py
